force-app/main/default/objects/Policy_Claim__c/Policy_Claim__c.object-meta.xml
<CustomObject>
    <label>Policy Claim</label>
    <nameField>
        <displayFormat>CLAIM-{0000}</displayFormat>
        <label>Claim number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policy Claim</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>