force-app/main/default/objects/Policy_Claim__c/fields/Claim_Amount__c.field-meta.xml
<CustomField>
    <fullName>Claim_Amount__c</fullName>
    <label>Claim Amount</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>