force-app/main/default/objects/Policy_Claim__c/fields/Is_Fraud__c.field-meta.xml
<CustomField>
    <fullName>Is_Fraud__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Fraud</label>
    <type>Checkbox</type>
</CustomField>