force-app/main/default/objects/Policy_Claim__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy</label>
    <referenceTo>Policy__c</referenceTo>
    <relationshipLabel>Policy Claim</relationshipLabel>
    <relationshipName>Policy_Claim</relationshipName>
    <type>Lookup</type>
</CustomField>